<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/NewItem"
        android:layout_width="392dp"
...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/PostNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testCondition" />

    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/TextCategories"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <Spinner
        android:id="@+id/spinnerDelivery"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/textDelivery"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategories" />

    <Spinner
        android:id="@+id/spinnerCondition"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@+id/testCondition"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDelivery" />

    <Spinner
        android:id="@+id/spinnerQuantity"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:ems="10"
        android:hint="@string/enter_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toEndOf="@+id/Enterdescription"
        app:layout_constraintTop_toBottomOf="@+id/chooseImageButton" />

    <Button
        android:id="@+id/chooseImageButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="39dp"
...
