<resources>
    <string name="app_name">Donation App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="donor">Donor</string>
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="my_items">My Items</string>
    <string name="new_item">New Item</string>
    <string name="current_postings">Current Postings</string>
    <string name="past_postings">Past Postings</string>
    <string name="item_description">Item Description</string>
    <string name="edit">Edit</string>
    <string name="post_new_item">Post New Item</string>
    <string name="enter_description">Enter Description</string>
    <string name="categories">Categories</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="condition">Condition</string>
    <string name="quantity">Quantity</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="submit_image">Submit Image</string>
    <string name="title_activity_main__screen">Main_Screen</string>
    <string name="title_activity_donor_signup">DonorSignup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
...
    <string name="recipient_login">Recipient Login</string>
    <string name="item_record">Item Record</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="delivery">Delivery</string>
    <string name="date">Date</string>
    <string name="choose_image">Choose Image</string>
    <string name="submitimage">submitImage</string>
    <string name="upload_image">Upload Image</string>
    <string name="item_picture">Item Picture</string>
    <string name="description">Description</string>
    <string name="item_details">Item Details</string>
    <string name="todo">TODO</string>
...
